# qol-assist

./: .gitignore  LICENSE.md  Makefile  README.md  gen_docs.sh  go.mod  go.sum  main.go  meson.build  meson_options.txt  mkrelease.sh
cli/: list_users.go  migrate.go  root.go  trigger.go  version.go
core/: context.go  files.go  migration.go
data/: meson.build  qol-assist-migration.service.in
man/: meson.build  qol-assist.1  qol-assist.1.html  qol-assist.1.md
resources/: qol-assist-migration.service.in  qol-assist.1.scd.in
src/: main.c  meson.build  migrate.c  migrate.h  user-manager.c  user-manager.h  util.c  util.h
src/cli/: cli.h  main.c  migrate.c  trigger.c  users.c
src/migrations/: 01_initial_groups.c  01_scanner_group.c  02_plugdev_group.c  03_users_group_gid.c  04_users_group_join.c  05_fuse_group.c  06_audio_group.c  declared.h  shared.c
